# saladbar

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/saladbar/: __init__.py  apps.py  conf.py  models.py  urls.py  views.py
src/saladbar/migrations/: 0001_initial.py
src/saladbar/templates/saladbar/: base.html  dashboard.html  result_detail.html  result_list.html  task_detail.html  task_list.html
src/saladbar/templatetags/: saladbar_tags.py
tests/: settings.py  test_conf.py  test_helpers.py  test_views.py  urls.py
