[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-saladbar"
dynamic = ["version"]
description = "A Celery task monitoring dashboard for Django"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brian Artschwager" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Celery",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "Django>=4.2",
    "celery>=5.0",
    "redis>=4.0",
    "django-celery-beat>=2.5",
    "django-celery-results>=2.5",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/bartschwager/django-saladbar"
Repository = "https://github.com/bartschwager/django-saladbar"
Changelog = "https://github.com/bartschwager/django-saladbar/blob/main/CHANGELOG.md"
Issues = "https://github.com/bartschwager/django-saladbar/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Derive version from git tags (e.g., v0.2.0 -> 0.2.0)
# Dev builds between tags get versions like 0.2.0.dev3+gabcdef1
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
